--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url='swimming.html'" />
+  </head>
+</html>
