Added route, and times html

--- a/reservations.html
+++ b/reservations.html
@@ -45,6 +45,7 @@
 		<p>Required items:</p>
 		<input type="text"/>
 		<button id = 'mainbutton' type='button' onclick = reserve()>Reserve</button>
+		<button id = 'mainbutton' type='button' onclick = "location.href='swimming.html'">Back</button>
 	</div>
 </body>
 
