--- a/swimming.html
+++ b/swimming.html
@@ -8,8 +8,9 @@
 		font-size: 7vmin;
 		color: red;
 		background-color: turquoise;
-		size: 200px;
+		height: 200px;
 		text-align: center;
+		padding: 70px;
 		}
 		
 		#subtitle{
@@ -77,6 +78,8 @@
 	</div>
 	<div id = 'contacts'>
 		<p>Call 314-159-2653 for more information</p>
+		<a href="route.html">See the Route</a>
+		<a href="times.html">Opening Times</a>
 	</div>
 </body>
 
