added chat page.

--- a/ad.html
+++ b/ad.html
@@ -35,6 +35,14 @@
 		border: 10px double lightblue;
 		padding: 25px;
 		}
+
+		#mainbutton{
+		background-color: blue;
+		color: white;
+		margin: 10px;
+		padding: 15px 25px;
+		display: inline-block;
+		}
 	</style>
 </head>
 
@@ -50,6 +58,9 @@
 		It is supported by 4 pools: Crockpot, Secondary, Tertiary, and Wading.<br/>
 		You can take lessons there. If you pass Lv3, you can test for a lap swim. If you pass Lv5, you can test for a SwimTeam. <br/>
 		Here is a picture of a 2022 graduate student, Roleous Polyie Coberlyhog.</p>
+		<p>The DiveIn Website gives imformation on the program.<br/>
+		   The DiveIn Social APP is where you can chat withe DiveIn officials.<br/>
+		   Click on the "Play a game" tab to play digital water basketball.</p>
 	</div>
 	<div id = 'emails'>
 		<p>e-Mails</p>
@@ -59,6 +70,9 @@
 	</div>
 		
 		<img id = 'graduate-dive' src='graduate.png'/>
+		<button id = 'mainbutton' onclick ="location.href='password2.html'">DiveIn Website</button>
+		<button id = 'mainbutton' onclick ="location.href='chat.html'">Social APP</button>
+		<button id = 'mainbutton' onclick ="location.href='game.html'">Play a game</button>
 	</div>
 </body>
 
