--- a/swimming.html
+++ b/swimming.html
@@ -69,6 +69,7 @@
 		<button id = 'mainbutton' type='button' onclick="location.href='registering.html'">Register</button>
 		<button id = 'mainbutton' type='button' onclick="location.href='password2.html'">Log Out</button>
 		<button id = 'mainbutton' type='button' onclick="location.href='reservations.html'">Reserve a Lane</button>
+		<button id = 'mainbutton' type='button' onclick="location.href='ad.html'">Back Home</button>
 	</div>
 	<div id = 'tableofcontents'>
 		<p>Table of Contents</p>
