make the battery smaller

--- a/ha.html
+++ b/ha.html
@@ -3,9 +3,16 @@
 
 <head>
     <title>Hedgehog Academy</title>
+    <style>
+        body{
+        background-image: url('background.png');
+        background-size: cover;
+        }
+    </style>
 </head>
 
 <body>
+    <img id = 'percent79' src='battery.png'/>
 </body>
 
 </html>
