fixed BUG: function not working

--- a/ha.html
+++ b/ha.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <img id = 'percent79' src='battery.png' onclick=showPercentage()/>
+    <img id = 'percent79' src='battery.png' onclick="showPercentage()" />
     <p style="font-size: 7vmin; text-align: center;">Hedgehog Academy: A Learning Computer</p>
     <img id = 'app' src='divein.png' onclick="location.href='password2.html'"/>
     <img id = 'app' src='stevesblog.png' onclick="location.href='StevesBlog/password.html'"/>
