made APPs more spaced out and added border

--- a/ha.html
+++ b/ha.html
@@ -18,6 +18,9 @@
         #app{
         height: 60px;
         width: 60px;
+        margin: 30px;
+        border: 5px solid black;
+        border-radius: 20%;
         }
     </style>
 </head>
@@ -25,7 +28,7 @@
 <body>
     <img id = 'percent79' src='battery.png' onclick="showPercentage()" />
     <p style="font-size: 7vmin; text-align: center;">Hedgehog Academy: A Learning Computer</p>
-    <img id = 'app' src='divein.png' onclick="location.href='password2.html'"/>
+    <img id = 'app' src='divein.png' onclick="location.href='ad.html'"/>
     <img id = 'app' src='stevesblog.png' onclick="location.href='StevesBlog/password.html'"/>
     <img id = 'app' src='math.png'/>
     <img id = 'app' src='reading.png'/>
