--- a/math.html
+++ b/math.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Math Hedgehog</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <style>
         #topbar{
         height: 200px;
@@ -38,6 +39,12 @@
         <p>Welcome to Math Hedgehog!</p>
     </div>
     <p id = 'timer' style="text-align:center; font-size: 3vmin;">Here is the timer for the test.</p>
+   <!-- <div id = 'mainsection2'>
+        <p>Points: </p>
+        <input id = 'box' type="text"/>
+        <p>Practice Suggestion: </p>
+        <input id = 'box' type="text"/>
+    </div>-->
     <div id = 'mainsection'>
         <p>Points: </p>
         <input id = 'box' type="text"/>
@@ -47,6 +54,9 @@
         <button id = 'mainbutton' onclick="giveProblem()">Problem of the Day</button>
         <button id = 'mainbutton' onclick="takeTest()">HMC5 Mock Test</button>
         <p>Math Video</p>
+        <img id = 'video' src='video.png'/>
+    </div>
+    <div id = 'problemsection'>
     </div>
 </body>
 
@@ -63,7 +73,7 @@
 
     function takeTest(){
         alert("Write the answers to the following problems on scratch paper. Send them to Teacher Fluffhog, and she will grade them." );
-        
+        alert("Scroll down to see the problems.");
         var time = 900;
         var round = setInterval( function() {
             if (time>0) {
@@ -71,19 +81,19 @@
                 document.getElementById("timer").innerHTML = time+" seconds left";
             } else {
                 clearInterval(round);
+                document.getElementById("problemsection").innerHTML = "";
             }
         }, 1000);
-
-        alert("What is 81x37?");
-        alert("How many prime numbers are between 1 and 100?");
-        alert("Prime factorize 1234");
-        alert("If (a+9)(a-9)=243, what is a?");
-        alert("<1+<2=100, and <3+<2=100. If the 3 angles form a straight angle, <1+<3=_.");
-        alert("(2/9)/(5/7)=_.");
-        alert("a+b=10 b+c=12 a+c=13. What is the average of these numbers?");
-        alert("125x8x25x16=_.");
-        alert("LCM(91, 14)=_.");
-        alert("Factor x^2+4x+5.");
+        $('#problemsection').append("<p>What is 81x37?</p>");
+        $('#problemsection').append("<p>How many prime numbers are between 1 and 100?</p>");
+        $('#problemsection').append("<p>Prime factorize 1234</p>");
+        $('#problemsection').append("<p>If (a+9)(a-9)=243, what is a?</p>");
+        $('#problemsection').append("<p><1+<2=100, and <3+<2=100. If the 3 angles form a straight angle, <1+<3=_.</p>");
+        $('#problemsection').append("<p>(2/9)/(5/7)=_.</p>");
+        $('#problemsection').append("<p>a+b=10 b+c=12 a+c=13. What is the average of these numbers?</p>");
+        $('#problemsection').append("<p>125x8x25x16=_.</p>");
+        $('#problemsection').append("<p>LCM(91, 14)=_.</p>");
+        $('#problemsection').append("<p>Factor x^2+4x+5.</p>");
     }
 </script>
 
