embedded  YouTube video

--- a/math.html
+++ b/math.html
@@ -54,7 +54,13 @@
         <button id = 'mainbutton' onclick="giveProblem()">Problem of the Day</button>
         <button id = 'mainbutton' onclick="takeTest()">HMC5 Mock Test</button>
         <p>Math Video</p>
-        <img id = 'video' src='video.png'/>
+        <iframe width="560" height="315" 
+            src="https://www.youtube.com/embed/qsahElBnjGw" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen>
+        </iframe>
     </div>
     <div id = 'problemsection'>
     </div>
