--- a/ha.html
+++ b/ha.html
@@ -30,7 +30,7 @@
     <p style="font-size: 7vmin; text-align: center;">Hedgehog Academy: A Learning Computer</p>
     <img id = 'app' src='divein.png' onclick="location.href='ad.html'"/>
     <img id = 'app' src='stevesblog.png' onclick="location.href='StevesBlog/password.html'"/>
-    <img id = 'app' src='math.png'/>
+    <img id = 'app' src='math.png' onclick="location.href='math.html'"/>
     <img id = 'app' src='reading.png'/>
     <img id = 'app' src='science.png'/>
 </body>
