--- a/math.html
+++ b/math.html
@@ -61,6 +61,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
             allowfullscreen>
         </iframe>
+        <a href= "xoxo.html">Strategy Game</a>
     </div>
     <div id = 'problemsection'>
     </div>
