--- a/xoxo.html
+++ b/xoxo.html
@@ -64,6 +64,10 @@
     function place(box){
         if(box.innerText != "") return;
         box.innerText = currentPlayer;
+
+        // Check and see if someone wins
+        checkBoard();
+
         if(currentPlayer == "O"){
             currentPlayer = "X";
         }else{
@@ -71,33 +75,58 @@
         }
     }
 
-    // BUG: function not working yet.
     function checkBoard(){
+
+        // three in a row
         for(var i = 0; i<=2; i++){
             var first = document.getElementById("0_"+i).innerText;
             var second = document.getElementById("1_"+i).innerText;
             var third = document.getElementById("2_"+i).innerText;
+
             if(first == "") continue;
+
             if(first == second && first == third){
-            alert("Game Over!");
+                alert("Game Over! Player " + currentPlayer + " wins!");
+                restart();
             }
         }
 
+        // three in a column
        for(var i = 0; i<=2; i++){
             var first = document.getElementById(i+"_0").innerText;
             var second = document.getElementById(i+"_1").innerText;
             var third = document.getElementById(i+"_2").innerText;
+
             if(first == "") continue;
+            
             if(first == second && first == third){
-            alert("Game Over!");
+                alert("Game Over! Player " + currentPlayer + " wins!");
+                restart();
             }
         }
+
+        // three in diagonal one
         var firstD1 = document.getElementById("0_0").innerText;
         var secondD1 = document.getElementById("1_1").innerText;
         var thirdD1 = document.getElementById("2_2").innerText;
         if(firstD1 != "" && firstD1 == secondD1 && firstD1 == thirdD1){
-        alert("Game Over!");
+            alert("Game Over! Player " + currentPlayer + " wins!");
+            restart();
         }
+
+        // three in diagonal two
+        var firstD2 = document.getElementById("2_0").innerText;
+        var secondD2 = document.getElementById("1_1").innerText;
+        var thirdD2 = document.getElementById("0_2").innerText;
+        if(firstD2 != "" && firstD2 == secondD2 && firstD2 == thirdD2){
+            alert("Game Over! Player " + currentPlayer + " wins!");
+            restart();
+        }
+    }
+
+    function restart(){
+        // TODO: clear the board
+        // document.getElementsByClassName('row').innerText="";
     }
 </script>
 
