restart() still not working

--- a/xoxo.html
+++ b/xoxo.html
@@ -126,7 +126,7 @@
 
     function restart(){
         // TODO: clear the board
-        // document.getElementsByClassName('row').innerText="";
+         document.getElementsByClassName('row').innerHTML="";
     }
 </script>
 
