restart() still not working

--- a/xoxo.html
+++ b/xoxo.html
@@ -124,10 +124,10 @@
         }
     }
 
-    function restart(){
+   /* function restart(){
         // TODO: clear the board
          document.getElementsByClassName('row').innerHTML="";
-    }
+    }*/
 </script>
 
 <html>
