--- a/xoxo.html
+++ b/xoxo.html
@@ -86,7 +86,9 @@
             if(first == "") continue;
 
             if(first == second && first == third){
+                /*requestAnimationFrame(() =>{
                 alert("Game Over! Player " + currentPlayer + " wins!");
+                 });*/
                 restart();
             }
         }
@@ -100,7 +102,7 @@
             if(first == "") continue;
             
             if(first == second && first == third){
-                alert("Game Over! Player " + currentPlayer + " wins!");
+                //alert("Game Over! Player " + currentPlayer + " wins!");
                 restart();
             }
         }
@@ -110,7 +112,7 @@
         var secondD1 = document.getElementById("1_1").innerText;
         var thirdD1 = document.getElementById("2_2").innerText;
         if(firstD1 != "" && firstD1 == secondD1 && firstD1 == thirdD1){
-            alert("Game Over! Player " + currentPlayer + " wins!");
+            //alert("Game Over! Player " + currentPlayer + " wins!");
             restart();
         }
 
@@ -119,18 +121,24 @@
         var secondD2 = document.getElementById("1_1").innerText;
         var thirdD2 = document.getElementById("0_2").innerText;
         if(firstD2 != "" && firstD2 == secondD2 && firstD2 == thirdD2){
-            alert("Game Over! Player " + currentPlayer + " wins!");
+            //alert("Game Over! Player " + currentPlayer + " wins!");
             restart();
         }
     }
 
    function restart(){
-        for(var i = 0; i<=2; i++){
-            document.getElementById(i+"_0").innerText = "";
-            document.getElementById(i+"_1").innerText = "";
-            document.getElementById(i+"_2").innerText = "";
+    setTimeout(() =>{
+                alert("Game Over! Player " + currentPlayer + " wins!");
+                for(var i = 0; i<=2; i++){
+                    document.getElementById(i+"_0").innerText = "";
+                    document.getElementById(i+"_1").innerText = "";
+                    document.getElementById(i+"_2").innerText = "";
+                 }
+                }, 0);
+           /* requestAnimationFrame(() =>{
+                alert("Game Over! Player " + currentPlayer + " wins!");
+                 });*/
         }
-    }
 </script>
 
 <html>
