added random number game

--- a/math.html
+++ b/math.html
@@ -39,12 +39,6 @@
         <p>Welcome to Math Hedgehog!</p>
     </div>
     <p id = 'timer' style="text-align:center; font-size: 3vmin;">Here is the timer for the test.</p>
-   <!-- <div id = 'mainsection2'>
-        <p>Points: </p>
-        <input id = 'box' type="text"/>
-        <p>Practice Suggestion: </p>
-        <input id = 'box' type="text"/>
-    </div>-->
     <div id = 'mainsection'>
         <p>Points: </p>
         <input id = 'box' type="text"/>
@@ -62,6 +56,7 @@
             allowfullscreen>
         </iframe>
         <a href= "xoxo.html">Strategy Game</a>
+        <a href= "random.html">Make X X's Equal X</a>
     </div>
     <div id = 'problemsection'>
     </div>
