--- a/lessons.html
+++ b/lessons.html
@@ -172,6 +172,7 @@ Students who pass this level can test for a swim team.<br/>
 		<a href="swimming.html">Home</a>
 		<a href="swimteams.html">Swim Teams</a>
 		<a href="maps.html">Maps</a>
+		<a href="adaptive.html">Adaptive Swim</a>
 	</div>
 </body>
 </html>
