--- a/maps.html
+++ b/maps.html
@@ -44,6 +44,7 @@
 		<a href='swimming.html'>Home</a>
 		<a href='lessons.html'>Lessons</a>
 		<a href='swimteams.html'>Swim Teams</a>
+		<a href='adaptive.html'>Adaptive Swim</a>
 	</div>
 </body>
 
