--- a/swimming.html
+++ b/swimming.html
@@ -76,6 +76,7 @@
 		<a href="lessons.html">Lessons</a>
 		<a href="swimteams.html">Swim Teams</a>
 		<a href="maps.html">Maps</a>
+		<a href="adaptive.html">Adaptive Swim</a>
 	</div>
 	<div id = 'contacts'>
 		<p>Call 314-159-2653 for more information</p>
