--- a/swimteams.html
+++ b/swimteams.html
@@ -39,6 +39,7 @@
 		<a href="swimming.html">Home</a>
 		<a href="lessons.html">Lessons</a>
 		<a href="maps.html">Maps</a>
+		<a href="adaptive.html">Adaptive Swim</a>
 	</div>
 </body>
 
