turned buttons into tabs

--- a/StevesBlog/anime.html
+++ b/StevesBlog/anime.html
@@ -17,7 +17,7 @@
 		<button id= 'mainbutton' onclick = stopChicken()>Stop the Chicken</button>
 	</div>
 	
-	<div id='mainsection2'>
+	<div id='mainsection'>
 		<img id = 'chicken' class = 'chickenAnimation' src = 'chicken.png'/>
 	</div>
 	
