--- a/ad.html
+++ b/ad.html
@@ -5,9 +5,9 @@
 	<title>Welcome to Dive In!</title>
 	<style>
 		#header{
-		height: 200px;
-		padding: 70px;
-		font-size: 6vmin;
+		height: 500px;
+		/*padding: 60px;*/
+		font-size: 10vmin;
 		text-align: center;
 		background-color: turquoise;
 		}
@@ -18,7 +18,7 @@
 		}
 		
 		#welcome{
-		font-size: 4vmin;
+		font-size: 6vmin;
 		text-align: center;
 		color: white;
 		background-color: blue;
@@ -43,11 +43,19 @@
 		padding: 15px 25px;
 		display: inline-block;
 		}
+		/*#website{
+		height: 13px;
+		width: 50px;
+		}*/
 	</style>
 </head>
 
 <body>
 	<div id = 'header'>
+		<!--<img id = 'website' src="website.png"/>-->
+		<p style = "font-size: 4vmin; color: crimson;" onclick ="location.href='swimming.html'">DiveIn Website</p>
+		<p style = "font-size: 4vmin; color: crimson" onclick ="location.href='chat.html'">Social APP</p>
+		<p style = "font-size: 4vmin; color: crimson" onclick ="location.href='game.html'">Play a Game</p>
 		<p>Dive IN!</p>
 	</div>
 	<div id = 'welcome'>
@@ -60,7 +68,7 @@
 		Here is a picture of a 2022 graduate student, Roleous Polyie Coberlyhog.</p>
 		<p>The DiveIn Website gives imformation on the program.<br/>
 		   The DiveIn Social APP is where you can chat withe DiveIn officials.<br/>
-		   Click on the "Play a game" tab to play digital water basketball.</p>
+		   Click on the "Play a Game" tab to play digital water basketball.</p>
 	</div>
 	<div id = 'emails'>
 		<p>e-Mails</p>
@@ -70,9 +78,9 @@
 	</div>
 		
 		<img id = 'graduate-dive' src='graduate.png'/>
-		<button id = 'mainbutton' onclick ="location.href='password2.html'">DiveIn Website</button>
+		<!--<button id = 'mainbutton' onclick ="location.href='password2.html'">DiveIn Website</button>
 		<button id = 'mainbutton' onclick ="location.href='chat.html'">Social APP</button>
-		<button id = 'mainbutton' onclick ="location.href='game.html'">Play a game</button>
+		<button id = 'mainbutton' onclick ="location.href='game.html'">Play a game</button>-->
 	</div>
 </body>
 
