--- a/StevesBlog/password.html
+++ b/StevesBlog/password.html
@@ -15,6 +15,7 @@
 	<p style="font-size: 4vmin;">Enter the correct password to view my website.</p>
 	<p style="font-size: 4vmin;">Password:<input id="passwordBox" type="password"/></p>
 	<a href="index.html" style="font-size: 4vmin;" onclick="return checkPassword();">Submit password</a>
+	<img id = 'back' src='bellybutton.png' onclick ="location.href='ha.html'"/>
 </body>
 
 <script>
