--- a/ad.html
+++ b/ad.html
@@ -81,6 +81,7 @@
 		<!--<button id = 'mainbutton' onclick ="location.href='password2.html'">DiveIn Website</button>
 		<button id = 'mainbutton' onclick ="location.href='chat.html'">Social APP</button>
 		<button id = 'mainbutton' onclick ="location.href='game.html'">Play a game</button>-->
+		<button id = 'mainbutton' type='button' onclick="location.href='password2.html'">Log Out</button>
 	</div>
 </body>
 
