--- a/ha.html
+++ b/ha.html
@@ -40,11 +40,11 @@
 
 <body>
     <img id = 'percent79' src='battery.png' onclick="showPercentage()" />
-    <p style="font-size: 7vmin; text-align: center;">Hedgehog Academy: A Learning Computer</p>
-    <img id = 'app' src='divein.png' onclick="location.href='ad.html'"/>
+    <p style="font-size: 13vmin; text-align: center;">Hedgehog Academy: A Learning Computer</p>
+    <img id = 'app' src='divein.png' onclick="location.href='password2.html'"/>
     <img id = 'app' src='stevesblog.png' onclick="location.href='StevesBlog/password.html'"/>
     <img id = 'app' src='math.png' onclick="location.href='math.html'"/>
-    <img id = 'app' src='reading.png'/>
+    <img id = 'app' src='reading.png' onclick="location.href='writingread.html'"/>
     <img id = 'app' src='science.png'/>
     <div id = 'info'>
         <p>Name:</p>
