--- a/password2.html
+++ b/password2.html
@@ -12,11 +12,12 @@
 </head>
 
 <body>
-	<p style="font-size: 7vmin; color: red; background-color: turquoise; text-align: center;">The Guide to Dive In</p>
+	<p style="font-size: 7vmin; color: red; background-color: turquoise; text-align: center;">Dive IN!</p>
 	<p style="font-size: 4vmin;">Password:<input id="passwordBox" type="password"/>
-	<a href="swimming.html" onclick="return checkPassword();">Log In</a>
-	<p style="font-size: 4vmin;">Enter the password and click "Log In" to view the Dive IN website.</p>
+	<a href="ad.html" onclick="return checkPassword();">Log In</a>
+	<p style="font-size: 4vmin;">Enter the password and click "Log In" to view the Dive IN APP.</p>
 	<img id = 'app' src='app.png'/>
+	<img id = 'back' src='bellybutton.png' onclick ="location.href='ha.html'"/>
 </body>
 
 <script>
