--- a/random.html
+++ b/random.html
@@ -20,6 +20,7 @@
 
 <body>
     <button id = 'mainbutton' onclick="randomNumber()">Random Number</button>
+    <button id = 'mainbutton' onclick="location.href='math.html'">Back</button>
 </body>
 
 <script>
