--- a/math.html
+++ b/math.html
@@ -57,6 +57,7 @@
         </iframe>
         <a href= "xoxo.html">Strategy Game</a>
         <a href= "random.html">Make X X's Equal X</a>
+        <img id = 'back' src='bellybutton.png' onclick ="location.href='ha.html'"/>
     </div>
     <div id = 'problemsection'>
     </div>
