created basic writinghub homepage structure

--- a/StevesBlog/password.html
+++ b/StevesBlog/password.html
@@ -7,6 +7,11 @@
 		body{
 		background-color: #D7ADF9;
 	}
+	#back{
+        float: left;
+        position: relative;
+        left: 50%;
+        }
 	</style>	
 </head>
 
