--- a/ad.html
+++ b/ad.html
@@ -47,6 +47,11 @@
 		height: 13px;
 		width: 50px;
 		}*/
+		#back{
+        float: left;
+        position: relative;
+        left: 50%;
+        }
 	</style>
 </head>
 
