--- a/math.html
+++ b/math.html
@@ -31,6 +31,11 @@
         body{
         background-color: yellow
         }
+        #back{
+        float: left;
+        position: relative;
+        left: 50%;
+        }
     </style>
 </head>
 
