added forums page with addforum() function

--- a/writingread.html
+++ b/writingread.html
@@ -48,8 +48,8 @@
         If you were any object you want, what would you be?</button>
     </div>
     <div id = 'navigationbar'>
-        <button id = 'navigation'>Home</button>
-        <button id = 'navigation'>Forums</button>
+        <button id = 'navigation' onclick ="location.href='writingread.html'">Home</button>
+        <button id = 'navigation' onclick ="location.href='forums.html'">Forums</button>
         <button id = 'navigation'>Publish</button>
         <button id = 'navigation'>Exhibition Hall</button>
         <button id = 'navigation'>My</button>
