Updated index.html with two links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='swimming.html'" />
+<!--    <meta http-equiv="refresh" content="0; url='swimming.html'" /> -->
+    <title>Angela Zhixing Lu</title>
   </head>
+  <body>
+    <main>
+        <h1>Welcome to Angela's Website</h1>  
+        
+		<ul>
+		<li><a href="swimming.html">DiveIN Swimming School</a></li>
+       	<li>YouTube Video</li>
+        </ul>
+    </main>
+  </body>
 </html>
