Index: added original plays and fiction.

--- a/index.html
+++ b/index.html
@@ -8,20 +8,30 @@
     <main>
         <h1>Welcome to Angela's Website</h1>  
         
-		<ul>
-		<li><a href="swimming.html">DiveIN Swimming School</a></li>
-       	<li>YouTube Video</li>
-        </ul>
-
     <p><strong>YouTube Channels</strong> (2020-)</p>
 
-	<ul>
-		<li>Original Plays (2023-): I have written scripts and directed original plays at school since 2023! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3dpuUCN7kzB2gJcrt0Zb0eD">https://www.youtube.com/playlist?list=PLV3McmOPMM3dpuUCN7kzB2gJcrt0Zb0eD</a></li>
-		<li>FIRST Lego League (2024): I directed and edited a series of videos to show the judges how our Lego robots were designed to complete all missions. <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3dpN5C4oRYmxZfrWFEWpBAp">https://www.youtube.com/playlist?list=PLV3McmOPMM3dpN5C4oRYmxZfrWFEWpBAp</a></li>
-		<li>Clarinet practice (2024): I love clarinet! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3de2ARoH2s977t87sMAnqsY">https://www.youtube.com/playlist?list=PLV3McmOPMM3de2ARoH2s977t87sMAnqsY</a></li>
-		<li>Hedgehog Math (2023): Learn math from hedgehogs! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3cup6zkx4J2cRChUSm7k3aY">https://www.youtube.com/playlist?list=PLV3McmOPMM3cup6zkx4J2cRChUSm7k3aY</a></li>
-		<li>Minecraft (2020): I built new worlds in Minecraft and told my stories at age of 6. <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3edFCYct4dbqAkmWyzzKta0">https://www.youtube.com/playlist?list=PLV3McmOPMM3edFCYct4dbqAkmWyzzKta0</a></li>
-	</ul>
+		<ul>
+			<li>Original Plays (2023-): I have written scripts and directed original plays at school since 2023! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3dpuUCN7kzB2gJcrt0Zb0eD">https://www.youtube.com/playlist?list=PLV3McmOPMM3dpuUCN7kzB2gJcrt0Zb0eD</a></li>
+			<li>FIRST Lego League (2024): I directed and edited a series of videos to show the judges how our Lego robots were designed to complete all missions. <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3dpN5C4oRYmxZfrWFEWpBAp">https://www.youtube.com/playlist?list=PLV3McmOPMM3dpN5C4oRYmxZfrWFEWpBAp</a></li>
+			<li>Clarinet practice (2024): I love clarinet! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3de2ARoH2s977t87sMAnqsY">https://www.youtube.com/playlist?list=PLV3McmOPMM3de2ARoH2s977t87sMAnqsY</a></li>
+			<li>Hedgehog Math (2023): Learn math from hedgehogs! <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3cup6zkx4J2cRChUSm7k3aY">https://www.youtube.com/playlist?list=PLV3McmOPMM3cup6zkx4J2cRChUSm7k3aY</a></li>
+			<li>Minecraft (2020): I built new worlds in Minecraft and told my stories at age of 6. <a href="https://www.youtube.com/playlist?list=PLV3McmOPMM3edFCYct4dbqAkmWyzzKta0">https://www.youtube.com/playlist?list=PLV3McmOPMM3edFCYct4dbqAkmWyzzKta0</a></li>
+		</ul>
+
+	<p><strong>Scriptwriting and Directing of Original Plays</strong> (2023-)</p>
+	
+		<ul>
+			<li>Ms. Cobley&rsquo;s Hedgehog (2023): <a href="https://youtu.be/IH1Q6iaYIlk">https://youtu.be/IH1Q6iaYIlk</a></li>
+			<li>The Heartstone (2024): <a href="https://youtu.be/OeKP1YXHG1M">https://youtu.be/OeKP1YXHG1M</a></li>
+			<li>Perfect Heartstone (2025), work in progress, coming in 2025.</li>
+		</ul>
+
+	<p><strong>Original Fiction</strong> (2024-)</p>
+		
+		<ul>
+			<li>Sun-Wu Miao (2024), mixing characters and stories between Monkey King (Sun-Wu Kong) and Cat Warriors.</li>
+		</ul>
+		
     </main>
   </body>
 </html>
