Index: added music composition.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 		<ul>
 			<li>Sun-Wu Miao (2024), mixing characters and stories between Monkey King (Sun-Wu Kong) and Cat Warriors.</li>
 		</ul>
+
+	<p><strong>Music Composition</strong> (2023-)</p>
+		<ul>
+			<li>Ms. Coberly&rsquo;s 47 Hedgehog (2023): First piece.</li>
+			<li>Warm 106.9 (2024): First Barbershop tag!</li>
+			<li>Dive IN! (2024), with clarinet, percussion, piano, and Alto.</li>
+			<li>Swimming in a Swimming Pool (2024), for Alto Voice, Piano, Bb Clarinet, and Percussion.</li>
+		</ul>
 		
     </main>
   </body>
